# qatoto_blogs_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 40daea43a7f0_create_blogs_table.py
app/: app.py  db.py  models.py  schemas.py  settings.py
